--- a/files/配送单下单/styles.css
+++ b/files/配送单下单/styles.css
@@ -5027,7 +5027,7 @@
   top:56px;
   width:30px;
   height:30px;
-  font-family:'anticon';
+  font-family:'anticon Regular', 'anticon';
   font-weight:400;
   font-style:normal;
   font-size:52px;
@@ -5254,7 +5254,7 @@
   top:54px;
   width:30px;
   height:30px;
-  font-family:'anticon';
+  font-family:'anticon Regular', 'anticon';
   font-weight:400;
   font-style:normal;
   font-size:52px;
@@ -5481,7 +5481,7 @@
   top:48px;
   width:30px;
   height:30px;
-  font-family:'anticon';
+  font-family:'anticon Regular', 'anticon';
   font-weight:400;
   font-style:normal;
   font-size:52px;
@@ -5708,7 +5708,7 @@
   top:55px;
   width:30px;
   height:30px;
-  font-family:'anticon';
+  font-family:'anticon Regular', 'anticon';
   font-weight:400;
   font-style:normal;
   font-size:52px;
@@ -5935,7 +5935,7 @@
   top:55px;
   width:30px;
   height:30px;
-  font-family:'anticon';
+  font-family:'anticon Regular', 'anticon';
   font-weight:400;
   font-style:normal;
   font-size:52px;
