--- a/files/配送计划/styles.css
+++ b/files/配送计划/styles.css
@@ -3145,7 +3145,7 @@
   top:16px;
   width:24px;
   height:25px;
-  font-family:'anticon';
+  font-family:'anticon Regular', 'anticon';
   font-weight:400;
   font-style:normal;
   font-size:48px;
@@ -3273,7 +3273,7 @@
   top:14px;
   width:24px;
   height:24px;
-  font-family:'anticon';
+  font-family:'anticon Regular', 'anticon';
   font-weight:400;
   font-style:normal;
   font-size:24px;
