--- a/files/待处理发货计划/styles.css
+++ b/files/待处理发货计划/styles.css
@@ -34794,7 +34794,7 @@
   top:56px;
   width:30px;
   height:30px;
-  font-family:'anticon Regular', 'anticon';
+  font-family:'anticon';
   font-weight:400;
   font-style:normal;
   font-size:52px;
@@ -35021,7 +35021,7 @@
   top:55px;
   width:30px;
   height:30px;
-  font-family:'anticon Regular', 'anticon';
+  font-family:'anticon';
   font-weight:400;
   font-style:normal;
   font-size:52px;
@@ -35248,7 +35248,7 @@
   top:49px;
   width:30px;
   height:30px;
-  font-family:'anticon Regular', 'anticon';
+  font-family:'anticon';
   font-weight:400;
   font-style:normal;
   font-size:52px;
